CSS: Fix HTML overflow-hidden with & Without Smooth Scroll

--- a/scss/base/_root.scss
+++ b/scss/base/_root.scss
@@ -10,6 +10,7 @@ body {
 }
 
 html {
+	overflow: hidden;
 
 	&.is-loading {
 		overflow: hidden;
@@ -19,12 +20,17 @@ html {
 	&.has-scroll-smooth {
 		overflow: hidden;
 	}
-
+	   
 	&.has-scroll-dragging {
 		user-select: none;
 	}
 
 	&.is-loader-complete {
+	
+		&:not(.has-scroll-smooth) {
+			overflow: auto;
+		}
+
 	}
 
 }
@@ -40,7 +46,7 @@ body {
 	}
 
 	.is-loader-complete & {
-		overflow-y: visible;
+		overflow-y: auto;
 	}
 
 }
